# git_editor

./: Cargo.toml  CommitModel.cpp  CommitModel.h  Git-Icon-whiteBackground.eps  build.rs  git-editor.pro  git_editor.pro  git_editor.rc  main.cpp  qml.qrc  roleitemmodel.cpp  roleitemmodel.h
qml/git_editor/: CommitDelegate.qml  Draggable.qml  edit.qml  main.qml
qmlapplicationviewer/: qmlapplicationviewer.cpp
qt/: CommitModel.h
qt/qml/git_editor/: CommitDelegate.qml
src/: main.rs
