[package]
name = "git-editor"
version = "0.1.1"
authors = ["Bradley Smith <bradley@baysmith.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
imgui = { path = "../imgui-rs" }
imgui-winit-support = { path = "../imgui-rs/imgui-winit-support" }
winit = "0.22"
imgui-glium-renderer = { path = "../imgui-rs/imgui-glium-renderer" }
glium = { version = "0.27", default-features = true }
winapi = "0.3"
chrono = "0.4"
image = "0.22"
clipboard = "0.5"

[build-dependencies]
winres = "0.1"
